examples/errors/recursive-macro.spcasm
org 0

macro recursive
  mov a,#4
  %recursive()
endmacro

recursion_start:
  %recursive()
